@@ -545,8 +545,8 @@ show_usage(void)
            "Usage : " PACKAGE " [OPTION]... FILE...\n"
            "  Where FILE is an imlib 2 readable image file.\n"
            "  Multiple files are supported.\n"
-           "  Urls are supported. They must begin with http:// and you must have wget\n"
-           "  installed to download the files.\n"
+           "  Urls are supported. They must begin with http:// or ftp://and you must have\n"
+           "  wgetinstalled to download the files for viewing.\n"
            "  Options can also be defined in the environment variable FEH_OPTIONS\n"
            "  or in the feh configuration file. See man feh for more details\n"
            "  -h, --help                display this help and exit\n"
@@ -686,6 +686,7 @@ show_usage(void)
            " When viewing a slideshow, the following keys may be used:\n"
            " p, P, <BACKSPACE>, <LEFT>  Goto previous slide\n"
            " n, N, <SPACE>, <RIGHT>     Goto next slide\n"
+           " r, R                       Reload image (good for webcams)\n"
            " <HOME>                     Goto first slide\n"
            " <END>                      Goto last slide\n"
            " +, =                       Increase reload delay\n"
